class GameState:
    PLAYING = 0
    GAME_OVER = 1
    GAME_WIN = 2